crates/server/tests/analysis/snapshots/r#mod__symbol_table__alpha034__function_definition-4.snap
---
source: tests/symbol_table/alpha034.rs
expression: a_defs.get(&17)
---
Some(
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 13,
        end: 14,
        is_public: false,
    },
)
