crates/server/tests/analysis/snapshots/r#mod__symbol_table__alpha034__function_definition-6.snap
---
source: tests/symbol_table/alpha034.rs
expression: b_defs.get(&17)
---
Some(
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 16,
        end: 17,
        is_public: false,
    },
)
