crates/server/tests/analysis/snapshots/r#mod__symbol_table__alpha034__import_all_symbols-3.snap
---
source: tests/symbol_table/alpha034.rs
expression: foo_def1.get(&42)
---
Some(
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 8,
        end: 11,
        is_public: true,
    },
)
