crates/server/tests/analysis/snapshots/r#mod__symbol_table__alpha034__import_specific_symbols-2.snap
---
source: tests/symbol_table/alpha034.rs
expression: foo_refs.value()
---
[
    SymbolLocation {
        file: FileId(
            1,
        ),
        start: 39,
        end: 42,
        is_public: false,
    },
]
