crates/server/tests/analysis/snapshots/r#mod__symbol_table__alpha034__public_definitions.snap
---
source: tests/symbol_table/alpha034.rs
expression: "foo_def.get(&usize::MAX)"
---
Some(
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 8,
        end: 11,
        is_public: true,
    },
)
