crates/server/tests/analysis/snapshots/r#mod__symbol_table__alpha034__symbol_reference_in_expression-2.snap
---
source: tests/symbol_table/alpha034.rs
expression: b_refs.value()
---
[
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 45,
        end: 46,
        is_public: false,
    },
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 58,
        end: 59,
        is_public: false,
    },
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 75,
        end: 76,
        is_public: false,
    },
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 95,
        end: 96,
        is_public: false,
    },
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 103,
        end: 104,
        is_public: false,
    },
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 111,
        end: 112,
        is_public: false,
    },
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 144,
        end: 145,
        is_public: false,
    },
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 158,
        end: 159,
        is_public: false,
    },
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 176,
        end: 177,
        is_public: false,
    },
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 210,
        end: 211,
        is_public: false,
    },
]
