crates/server/tests/analysis/snapshots/r#mod__symbol_table__alpha034__variable_definition-2.snap
---
source: tests/symbol_table/alpha034.rs
expression: a_defs.get(&38)
---
Some(
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 28,
        end: 29,
        is_public: false,
    },
)
